<resources>
    <string name="app_name">RE Unab</string>
    <string name="txt_launch_reprof">RE Unab</string>
    <string name="txt_launch_reglamento">Reglamento Estudiantil</string>
    <string name="title_activity_panel_lateral">PanelLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="categor_as">Categorías</string>
    <string name="examen_r_pido">Examen</string>
    <string name="examen_intento">Intento</string>
    <string name="ayuda_e_inquietudes">Ayuda e inquietudes</string>
    <string name="configuraci_n">Configuración</string>
    <string name="calif_canos">Califícanos</string>
    <string name="acerca_de">Acerca de</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="t_tulos">Títulos</string>

    <string name="grupo1">Grupo 1</string>
    <string name="grupo2">Grupo 2</string>
    <string name="grupo3">Grupo 3</string>
    <string name="grupo4">Grupo 4</string>
    <string name="grupo5">Grupo 5</string>
    <string name="grupo6">Grupo 6</string>
    <string name="reglamento_de_profesores">Reglamento Estudiantil de Pregrado</string>
    <string name="detalles">Detalles</string>
    <string name="categoria">Categoria</string>
    <string name="textview1">TextView</string>
    <string name="ocultar">OCULTAR</string>
    <string name="examinar">EXAMINAR</string>
    <string name="imagen">Imagen</string>
    <string name="default_notification_channel_id">beta</string>
    <string name="detalle">Detalle</string>
    <string name="reprof_unab">RE Unab</string>
    <string name="acerca_info">Reglamento Estudiantil de Pregrado de la Unab</string>
    <string name="acerca_info2">Esta aplicación es el resultado de la ardua investigación y posterior, desarrollo de software por parte de la startup de base tecnológica \'The Boys\'. El propósito de este proyecto es ser el medio predilecto de divulgación del reglamento estudiantil de pregrado de la Universidad Autónoma de Bucaramanga. Si esta aplicación fue útil y de su agrado, le invitamos a seguirnos en nuestras principales redes sociales, para estar al tanto de nuestros próximos proyectos.</string>
    <string name="todo">TODO</string>
    <string name="mensaje_bienvenida">Bienvenido al Reglamento Estudiantil de Pregrado de la Unab</string>
    <string name="info_bienvenida">En el menú de la izquierda podrás ver las Categorías y las Preguntas frecuentes para que ahorres tiempo</string>
    <string name="imagen_bienvenida">imagende bienvenida</string>
    <string name="titulo_pregunta">Titulo examenModel</string>
    <string name="descripcion_pregunta">Descripcion examenModel</string>
    <string name="contact_developer_uri">mailto:dpacheco@unab.edu.co</string>
    <string name="califica_tu_experiencia">Califica tu experiencia</string>
    <string name="mensaje_calificacion">Esto nos permite mejorar constantemente</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="rating_error">No ha asignado la calificación</string>
    <string name="pfrecuentes">Preguntas frecuentes</string>
    <string name="feedback">Realimentación</string>
    <string name="feedback_hint">Upss… ¿Se cerró la app? ¿No te gustó el diseño? Dejanos conocer tu opinión o sugerencia por este medio</string>
    <string name="versionN">1</string>

    //Dark Theme
    <string name="theme">Color de tema</string>
    <string name="theme_light">Ligero</string>
    <string name="theme_dark">Oscuro</string>
    <string name="theme_time_based">Por la hora del día</string>
    <string name="preference_theme">theme</string>

    //Select Home view
    <string-array name="startscreens" translatable="false">
        <item>@string/inicio</item>
        <item>@string/categoria</item>
        <item>@string/examen_r_pido</item>
    </string-array>
    <string-array name="startscreens_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>



    <string name="contadorpreg">Pregunta: 1/x</string>
    <string name="verpuntua">0</string>
    <string name="preg">Aquí se carga la pregunta</string>
    <string name="op1">Opción 1</string>
    <string name="op2">Opción 2</string>
    <string name="op3">Opción 3</string>
    <string name="op4">Opción 4</string>
    <string name="btn_examen">Confirmar</string>
    <string name="btn_nuevoexamen">Iniciar un nuevo examen</string>
    <string name="examentitle">Examen</string>
    <string name="record">Record: </string>
    <string name="pregunta">Pregunta</string>
    <string name="score">score</string>
    <string name="irahora">goto</string>
    <string name="preference_start_screen">pinicio</string>
    <string name="startscreen">Pantalla de inicio</string>
    <string name="preference_sound">psonido</string>
    <string name="preference_vibration">pvibracio</string>
    <string name="feedback_mail">dpacheco@unab.edu.co</string>
    <string name="preference_license">lbope</string>
    <string name="licenses">Librerias Open Source</string>
    <string name="empty_feedback">¿Qué podemos mejorar?</string>
    <string name="imagenfd">imagen</string>
    <string name="txt_titulo_inicio">Reglamento estudiantil-UNAB</string>
    <string name="txt_titulo_juego">Juego de preguntas</string>

</resources>